<resources>
    <string name="app_name">DAMD_U1_SGEv2</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Emmanuel Esquivel Pardo</string>
    <string name="nav_header_subtitle">18120215</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bienvenida_main">Bienvenido al Sistema de Gestión Escolar, por favor selecciona la opción de acuerdo a tus actividades.</string>
    <string name="alumno">Alumno</string>
    <string name="profesor">Profesor</string>
    <string name="aspirante">Aspirante</string>
    <string name="correo_institucional">Correo Institucional</string>
    <string name="contrase_a">Contraseña</string>
    <string name="n_control">Numero de control</string>
    <string name="ingresar">Ingresar</string>
    <string name="cursos">Cursos</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opciones">Opciones</string>
    <string name="mis_cursos">Mis cursos</string>
    <string name="mis_datos">Mis datos</string>
    <string name="informacion_escolar">Informacion escolar</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="fragmento_opciones">Fragmento Opciones</string>
</resources>